examples/test/testpolicy4262.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4262
  namespace: namespace74
spec:
  podSelector:
    matchLabels:
      key25: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value45
          key44: value36
      podSelector:
        matchLabels:
          key39: value43
          key14: value28
          key22: value46
